fix: add overflow-x-clip to SidebarInset to fix horizontal scroll (caused by screen-line).

--- a/app/globals.css
+++ b/app/globals.css
@@ -287,11 +287,23 @@ input[type="password"]::-webkit-credentials-auto-fill-button {
 }
 
 @utility screen-line-top {
-  @apply relative before:absolute before:top-0 before:left-[-100vw] before:h-px before:w-[200vw] before:bg-border/50;
+  @apply relative 
+    before:absolute 
+    before:top-0 
+    before:left-[-100vw] 
+    before:h-px 
+    before:w-[200vw] 
+    before:bg-border/50;
 }
 
 @utility screen-line-bottom {
-  @apply relative after:absolute after:bottom-0 after:left-[-100vw] after:h-px after:w-[200vw] after:bg-border/50;
+  @apply relative 
+    after:absolute 
+    after:bottom-0 
+    after:left-[-100vw] 
+    after:h-px 
+    after:w-[200vw] 
+    after:bg-border/50;
 }
 
 
